--- a/Doctor/MainWindow.xaml
+++ b/Doctor/MainWindow.xaml
@@ -344,69 +344,36 @@
                         </StackPanel>
 
                         <StackPanel Grid.Row="2" Orientation="Vertical" >
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8">
+                            <ListBox x:Name="YsListDb"    HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="280" Height="520"  >
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                <ListBox.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="280"  />
+                                    </ItemsPanelTemplate>
+                                </ListBox.ItemsPanel>
+                                <ListBox.ItemTemplate >
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                    <DataTemplate>
+                                        <StackPanel Tag="{Binding icd10}" MouseLeftButtonDown="StackPanel_MouseLeftButtonDown" Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                             
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                            <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
+                                            <StackPanel Height="40" Orientation="Horizontal">
+                                                <Label Height="40" Width="90" Margin="5,0,0,0" FontSize="12"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding disease}"/>
+                                                <Image Width="20"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
+                                                <Image Width="20"  Height="25" Source="/Doctor;component/Resources/危.png"></Image>
+                                                <Image Width="20"  Height="25" Source="/Doctor;component/Resources/重.png"></Image>
+                                                <Label Height="40" Width="55" Margin="15,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
+                                                <Label Height="40"  Width="50"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="{Binding diseaseMatching}"/>
+                                            </StackPanel>
+                                        </StackPanel>
+                                    </DataTemplate>
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                </ListBox.ItemTemplate>
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                        
-                        
+                            </ListBox>
+
+
+
                         </StackPanel>
                         <StackPanel Grid.Row="3" Orientation="Horizontal">
                             <Image HorizontalAlignment="Center" VerticalAlignment="Center" Width="20" Height="20" Source="/Doctor;component/Resources/记录 .png"></Image>
