--- a/Doctor/MainWindow.xaml
+++ b/Doctor/MainWindow.xaml
@@ -354,7 +354,7 @@
                                 <ListBox.ItemTemplate >
 
                                     <DataTemplate>
-                                        <StackPanel Tag="{Binding icd10}" MouseLeftButtonDown="StackPanel_MouseLeftButtonDown" Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                        <StackPanel Tag="{Binding icd10}"  Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
 
                                             <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
                                             <StackPanel Height="40" Orientation="Horizontal">
