--- a/Doctor/YsList.xaml
+++ b/Doctor/YsList.xaml
@@ -64,10 +64,10 @@
 
                                             <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
                                             <StackPanel Height="40" Orientation="Horizontal">
-                                                <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding disease}"/>
-                                                <Image Width="20"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                                <Image Width="20"  Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                                <Image Width="20"  Height="25" Source="/Doctor;component/Resources/重.png"></Image>
+                                                <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="12"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding disease}"/>
+                                                <Image Width="20" Visibility="{Binding degreeJi}"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
+                                                <Image Width="20" Visibility="{Binding degreeWei}"  Height="25" Source="/Doctor;component/Resources/危.png"></Image>
+                                                <Image Width="20" Visibility="{Binding degreeZ}"  Height="25" Source="/Doctor;component/Resources/重.png"></Image>
                                                 <Label Height="40" Width="55" Margin="35,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
                                                 <Label Height="40"  Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="{Binding diseaseMatching}"/>
                                             </StackPanel>
