--- a/Doctor/Search.xaml
+++ b/Doctor/Search.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="400" Width="500">
+        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="400" Width="500" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
@@ -14,44 +14,44 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#F8F8F8 " >
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">增加疾病</Label>
 
-            <Button   Template="{StaticResource CloseWindwoBtn}" Margin="60,0,0,0" />
+            <Button Template="{StaticResource CloseWindwoBtn}" Margin="60,0,0,0" Click="CancelButton_Click" />
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="White" Orientation="Vertical">
             <StackPanel Height="50" Margin="0,30,0,0"  VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
                 <Label FontSize="16" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="120">疾病名称:</Label>
-                <TextBox Height="40" Width="250"></TextBox>
+                <TextBox Height="30" Width="300" MaxLines="1" FontSize="16" VerticalContentAlignment="Center" x:Name="diseaseNameTextBox"></TextBox>
             </StackPanel>
-            <Label Margin="40,10,0,0" FontSize="16"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" Width="310">常见病症</Label>
-            <StackPanel Margin="40,10,0,0" Orientation="Horizontal" HorizontalAlignment="Left" Width="310">
-                <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                    <Border CornerRadius="5"  Height="30" Width="80"   BorderThickness="3" BorderBrush="#F4F4F4">
-                        <Label VerticalContentAlignment="Center" FontSize="14"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
-
-                    </Border>
-                    <Button Background="#3484F5"  Template="{StaticResource BlueClose}" Margin="-10,-20,0,0" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                    <Border CornerRadius="5"  Height="30" Width="80"   BorderThickness="3" BorderBrush="#F4F4F4">
-                        <Label VerticalContentAlignment="Center" FontSize="14"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
-
-                    </Border>
-                    <Button Background="#3484F5"  Template="{StaticResource BlueClose}" Margin="-10,-20,0,0" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                    <Border CornerRadius="5"  Height="30" Width="80"   BorderThickness="3" BorderBrush="#F4F4F4">
-                        <Label VerticalContentAlignment="Center" FontSize="14"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
-
-                    </Border>
-                    <Button Background="#3484F5"  Template="{StaticResource BlueClose}" Margin="-10,-20,0,0" />
-                </StackPanel>
+            <Label Margin="40,10,0,0" FontSize="16"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" Width="310">常见症状:</Label>
+            <StackPanel Margin="40,10,0,0" Orientation="Horizontal" HorizontalAlignment="Left" Width="410">
+                <ScrollViewer Height="100" VerticalScrollBarVisibility="Auto" Width="410">
+                    <ItemsControl Width="390" x:Name="symptomListTiemsControl" BorderThickness="0">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel Orientation="Horizontal" IsItemsHost="True" Width="390"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate >
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
+                                    <Border CornerRadius="5" Height="36" Width="80" BorderThickness="3" BorderBrush="#F4F4F4">
+                                        <Label VerticalContentAlignment="Center" FontSize="14"  HorizontalContentAlignment="Center"  Background="#F4F4F4" Content="{Binding .}"></Label>
+                                    </Border>
+                                    <Button Background="#3484F5" Tag="{Binding .,Mode=OneWay}" Template="{StaticResource BlueClose}" Click="RemoveButton_Click" Margin="-10,-20,0,0" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+                
+                
             </StackPanel>
-            <StackPanel Height="50" Margin="0,30,0,0"  VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
-                <Label FontSize="16" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="120">疾病名称:</Label>
-                <TextBox Height="40" Width="250"></TextBox>
+            <StackPanel Height="30" Margin="50,30,0,0"  VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
+                <TextBox Height="30" Width="300" MaxLines="1" FontSize="16" VerticalContentAlignment="Center" x:Name="sTextBox"></TextBox>
+                <Button Style="{StaticResource GreenButton}" FontSize="15" Height="30" Width="60" Margin="10,0,0,0" Click="AddButton_Click" >添加</Button>
             </StackPanel>
             <StackPanel Height="50" Margin="0,30,0,0"  VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button  Style="{StaticResource QuxiaoButton}" Background="#D9D9D9" FontSize="15" Height="30" Width="60" Margin="10,0,0,0" >取消</Button>
-                <Button  Style="{StaticResource GreenButton}" FontSize="15" Height="30" Width="60" Margin="10,0,0,0" >保存</Button>
+                <Button Style="{StaticResource QuxiaoButton}" Background="#D9D9D9" FontSize="15" Height="30" Width="60" Margin="10,0,0,0" Click="CancelButton_Click" >取消</Button>
+                <Button Style="{StaticResource GreenButton}" FontSize="15" Height="30" Width="60" Margin="10,0,0,0" Click="SaveButton_Click" >保存</Button>
             </StackPanel>
         </StackPanel>
        
