--- a/Doctor/MainWindow.xaml
+++ b/Doctor/MainWindow.xaml
@@ -3,10 +3,24 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:scm="clr-namespace:System;assembly=System"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:Doctor"
+        xmlns:acb="http://wpfcontrols.com/"
+        xmlns:providers="clr-namespace:Doctor.Providers" 
         mc:Ignorable="d"
         WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="700" Width="1000" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
-    
+
+    <Window.Resources>
+        <TextBlock x:Key="LoadingContent" Text="加载中..." Margin="5" FontSize="14" />
+        <providers:StateSuggestionProvider x:Key="StateSuggestionProvider"/>
+        <DataTemplate x:Key="StateTemplate">
+            <Grid>
+                <TextBlock Text="{Binding Path=symptom}"></TextBlock>
+            </Grid>
+        </DataTemplate>
+    </Window.Resources>
+
     <Grid>        
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
@@ -45,7 +59,19 @@
                                 <StackPanel Grid.Row="0" Orientation="Vertical"  >
                                     <StackPanel Orientation="Horizontal">
                                         <Label Height="40" Width="400" FontSize="14"  FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">主诉症状</Label>
-                                        <local:SearchText Height="25" Width="300" x:Name="searchText"></local:SearchText>
+                                        <!--<local:SearchText Height="25" Width="300" x:Name="searchText"></local:SearchText>-->
+                                        <acb:AutoCompleteTextBox HorizontalAlignment="Stretch"   x:Name="t1" KeyDown="TbxInput_OnKeyDown"                                     
+                                                 MaxLength="50" Width="280"
+                                                 CharacterCasing="Upper"
+                                                 DisplayMember="symptom"
+                                                 Height="30"
+                                                 Margin="0,0,6,0"
+                                                 Provider="{StaticResource ResourceKey=StateSuggestionProvider}"
+                                                 ItemTemplate="{StaticResource ResourceKey=StateTemplate}"
+                                                 LoadingContent="{StaticResource LoadingContent}"
+                                                 SelectedItem="{Binding symptom, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                                 Watermark="请选择症状">
+                                        </acb:AutoCompleteTextBox>
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="700" VerticalAlignment="Center" Fill="#000000" Height="1"/>
 
@@ -364,7 +390,7 @@
                                                 <Image Width="20" Visibility="{Binding degreeJi}"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
                                                 <Image Width="20" Visibility="{Binding degreeWei}"  Height="25" Source="/Doctor;component/Resources/危.png"></Image>
                                                 <Image Width="20" Visibility="{Binding degreeZ}"  Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                                <Label Height="40" Width="55" Margin="15,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
+                                                <Label Height="40" Width="55" Margin="5,0,0,5" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
                                                 <Label Height="40"  Width="50"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="{Binding diseaseMatching}"/>
                                             </StackPanel>
                                         </StackPanel>
